tests/gabc-dump/should-fail/bad_translation_centering_2.gabc
name: bad translation centering (2);
%%
(c4) ab(ab) cd[translation](cd) ef[/](ef) gh[/](gh)
